AirPollution component display on mobile - fix

--- a/src/components/ui/popup/css/chemical.css
+++ b/src/components/ui/popup/css/chemical.css
@@ -12,8 +12,9 @@
 } 
 
 .chemical-box th {
-    width: 8.5rem;
-    text-align: left;
+    width: 45%;
+    padding-right: 1rem;
+    text-align: right;
     font-size: 0.85rem;
     vertical-align: top;
 }
